--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -6,6 +6,7 @@
     android:useDefaultMargins="true" >
 
     <TextView
+        android:id="@+id/boutonAjouter"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="center_horizontal"
@@ -16,6 +17,7 @@
         android:textSize="32dip" />
 
     <TextView
+        android:id="@+id/boutonNomBoisson"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="1"
@@ -23,6 +25,7 @@
     </TextView>
 
     <TextView
+        android:id="@+id/boutonFrançais"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="2"
@@ -37,10 +40,11 @@
 
         android:ems="10" />
     <TextView
+        android:id="@+id/boutonAnglais"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="3"
-        android:text="en anglais :" >
+        android:text="in english :" >
     </TextView>
 
     <EditText
@@ -51,10 +55,11 @@
 
         android:ems="10" />
     <TextView
+        android:id="@+id/boutonNeerlandais"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="4"
-        android:text="en néerlandais :" >
+        android:text="in het Nederlands:" >
     </TextView>
 
     <EditText
@@ -65,7 +70,8 @@
 
         android:ems="10" />
 
-    <TextView
+    <TextViewandroid:id
+        android:"@+id/boutonDescription"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="5"
@@ -73,6 +79,7 @@
     </TextView>
 
     <TextView
+        android:id="@+id/boutonFrançais1"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="6"
@@ -92,7 +99,7 @@
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="7"
-        android:text="en anglais" >
+        android:text="in English:" >
     </TextView>
 
     <EditText
@@ -107,7 +114,7 @@
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="8"
-        android:text="en néerlandais" >
+        android:text="n het Nederlands" >
     </TextView>
 
     <EditText
@@ -119,6 +126,7 @@
         android:ems="10"
         android:layout_height="96dp" />
     <TextView
+        android:id="@+id/breels1"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="9"
@@ -136,6 +144,7 @@
 
 
     <TextView
+        android:id="@+id/breels2"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="10"
@@ -151,7 +160,8 @@
         android:ems="4" />
 
     <TextView
-        android:layout_column="0"
+    android:id="@+id/breels3"
+    android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="11"
         android:text="@string/stockmax" >
@@ -164,6 +174,7 @@
         android:layout_row="11"
         android:ems="4" />
     <TextView
+    android:id="@+id/breels4
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="12"
@@ -177,6 +188,7 @@
         android:layout_row="12"
         android:ems="4" />
     <TextView
+    android:id="@+id/breels5"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="13"
@@ -191,6 +203,7 @@
         android:ems="4" />
         
     <Button
+    android:id="@+id/breels6"
         android:id="@+id/appajout"
         android:layout_column="2"
         android:layout_row="14"
