--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/modification_datastock.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/modification_datastock.xml
@@ -7,6 +7,7 @@
     >
 
     <TextView
+        android:id="@+id/Modif"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="center_horizontal"
@@ -17,7 +18,7 @@
         android:textSize="32dip" />
 
     <TextView
-
+        android:id="@+id/ModifBoisson"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="1"
@@ -33,6 +34,7 @@
         android:ems="10" />
 
     <TextView
+        android:id="@+id/ModifQuantite"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="2"
