--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/retrait_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/retrait_boisson.xml
@@ -6,6 +6,7 @@
     android:useDefaultMargins="true" >
 
     <TextView
+        android:id="@+id/retrait"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="center_horizontal"
@@ -16,6 +17,7 @@
         android:textSize="32dip" />
 
     <TextView
+        android:id="@+id/boisson"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="1"
