--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_carte.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_carte.xml
@@ -5,11 +5,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/happyhour1"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22dp"/>
+        android:id="@+id/happyhour1"/>
+
     <TextView
         android:layout_below="@+id/happyhour1"
         android:id="@+id/happyhour2"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Carte"
         android:id="@+id/button_carte"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
 
         android:layout_centerHorizontal="true"
         android:onClick="carte"/>
