--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -70,8 +70,9 @@
 
         android:ems="10" />
 
-    <TextViewandroid:id
-        android:"@+id/boutonDescription"
+    <TextView
+        android:id="@+id/boutonDescription"
+
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="5"
@@ -174,7 +175,7 @@
         android:layout_row="11"
         android:ems="4" />
     <TextView
-    android:id="@+id/breels4
+    android:id="@+id/breels4"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="12"
@@ -204,7 +205,6 @@
         
     <Button
     android:id="@+id/breels6"
-        android:id="@+id/appajout"
         android:layout_column="2"
         android:layout_row="14"
         android:text="@string/applique"
