--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/scrollView"
+    >
+<GridLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="4"
     android:useDefaultMargins="true" >
+
+
 
     <TextView
         android:id="@+id/boutonAjouter"
@@ -216,4 +223,7 @@
         android:text="@string/retour"
         android:layout_width="159dp" />
 
+
+
 </GridLayout>
+</ScrollView>
